primer avance desafio2

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 *.jpg
 /clase2php3/nbproject/private/
 /clase2php3/clase2_jorge
+/desafios/desafio2/practica-clase-2-nivel-3
+/.vs
+/desafios/desafio2/nbproject/private/
