--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /desafios/desafio2/practica-clase-2-nivel-3
 /.vs
 /desafios/desafio2/nbproject/private/
+/desafios/desafio2/2921_2_1_18332410
+/desafios/desafio3/nbproject/private/
