--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /desafios/desafio2/nbproject/private/
 /desafios/desafio2/2921_2_1_18332410
 /desafios/desafio3/nbproject/private/
+/desafios/Nueva Carpeta/nbproject/private/
